--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde = { version = "1.0.137", features = [ "derive" ] }
 serde_json = "1.0.81"
 
 chrono = { version = "0.4.19", features = [ "serde" ] }
+
+prettytable-rs = "0.8.0"
