--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.1"
 edition = "2021"
 license="MIT"
 license-file="LICENSE"
+description="It's a command-line application intended to help recording and managing simple financial records for personal use."
 homepage="https://github.com/JuanCSUCoder/TerMoney"
 repository="https://github.com/JuanCSUCoder/TerMoney"
 readme="README.md"
