--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,15 +7,15 @@
 		{
 			"type": "lldb",
 			"request": "launch",
-			"name": "Debug executable 'walletmanager'",
+			"name": "Debug executable 'termoney'",
 			"cargo": {
 				"args": [
 					"build",
-					"--bin=walletmanager",
-					"--package=walletmanager"
+					"--bin=termoney",
+					"--package=termoney"
 				],
 				"filter": {
-					"name": "walletmanager",
+					"name": "termoney",
 					"kind": "bin"
 				}
 			},
@@ -30,11 +30,11 @@
 				"args": [
 					"test",
 					"--no-run",
-					"--bin=walletmanager",
-					"--package=walletmanager"
+					"--bin=termoney",
+					"--package=termoney"
 				],
 				"filter": {
-					"name": "walletmanager",
+					"name": "termoney",
 					"kind": "bin"
 				}
 			},
